examples/nginx/echoserver/ingress-notls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver
  namespace: echoserver
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    # kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  # tls:
  # - hosts:
  #   - echo.example.com
  #   secretName: echoserver-tls
  rules:
  - host: echo.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 80
